--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@
 5. In config dialog - for gradient directions, use "Top to bottom" instead of
    "Horizontal" and "Left to right" instead of "Vertical"
 6. Add support for translations of config dialogs.
+    Turkish translation by Necmettin Begiter
 
 0.65.2
 ------
