--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.65.4
+------
+1. Fix installation location of translation files.
+
 0.65.3
 ------
 1. When not using button-like check/radio boxes, use view text as the
