--- a/po/qtcurve.pot
+++ b/po/qtcurve.pot
@@ -189,7 +189,7 @@ msgid "KDE"
 msgstr ""
 
 #: config/qtcurveconfig.cpp:427 config/qtcurveconfig.cpp:962
-msgid "Windows"
+msgid "MS Windows"
 msgstr ""
 
 #: config/qtcurveconfig.cpp:428
