--- a/ChangeLog
+++ b/ChangeLog
@@ -11,11 +11,11 @@
 0.65.3
 ------
 1. When not using button-like check/radio boxes, use view text as the
-   indicator color.
+   indicator colour.
 2. Fix slight tab glitches when using glow tab mouse over and square
    tabs.
-3. Fix usage of custom menu text colors.
-4. Fix custom menu stripe color.
+3. Fix usage of custom menu text colours.
+4. Fix custom menu stripe colour.
 5. In config dialog - for gradient directions, use "Top to bottom" instead of
    "Horizontal" and "Left to right" instead of "Vertical"
 6. Add support for translations of config dialogs.
@@ -47,7 +47,7 @@
  7. Enable mouse-over for entry fields.
  8. For mouse-over and focus, use same colour for top and bottom inner parts
     of entry fields.
- 9. When using full focus with colored mouse over, then mouse over takes
+ 9. When using full focus with coloured mouse over, then mouse over takes
     precedence.
 10. Alter default settings:
         Place arrows of spin buttons, and editable combos, in the edit field.
@@ -82,7 +82,7 @@
  4. Use equal top/bottom padding on popupmenu separators.
  5. Add option to colour arrow part of combobox.
  6. Draw resize grip as a darkend triangle.
- 7. Add a 'thick colored border' mouse over type.
+ 7. Add a 'thick coloured border' mouse over type.
  8. Allow to darken sliders.
  9. Add new default button indicator - darken.
 10. Fix mispainted spin widget entry field.
@@ -103,7 +103,7 @@
  2. Use a lighter shade for the dark portion of gradient border.
  3. Flat dot for radio buttons.
  4. Option to use button colour for listview headers.
- 5. Use KDE4 colors for focus and mouse-over.
+ 5. Use KDE4 colours for focus and mouse-over.
  6. Removal of background focus option.
  7. Softer colouration of selected tab.
  8. Tab mouse over options; top (as before), below, or glow.
@@ -113,7 +113,7 @@
      Align titlebars text in center
 10. Add appearance setting for background of flat scrollbar buttons.
 11. Add HCY colour space.
-12. Use tint and mix color routines from KDE4's KColorUtils.
+12. Use tint and mix colour routines from KDE4's KColourUtils.
 13. Remove QtCurve's 'inactiveHighlight' option, and use KDE4s setting
     instead.
 14. Add option to specify appearance setting of filler part of sliders.
@@ -121,9 +121,9 @@
     config items.
 16. When using glow style mouse over, use mouse over colour for arrows.
 17. Option to use a thinner groove for scrollbars (only when using flat, or no, buttons).
-18. Option to only color sliders on mouse over.
+18. Option to only colour sliders on mouse over.
 19. Option to round all tabs.
-20. Add option to specify menu stripe color.
+20. Add option to specify menu stripe colour.
 21. Update gradient preview when change colour space.
 22. Remove 'Custom sunken gradient' setting, as this was not
     actually used.
@@ -281,7 +281,7 @@
 11. Use base for light part of lineedit border, and background for scrollview.
 12. Nicer 'V' arrows.
 13. Add option to specify appearance of inactive titlebars.
-14. Round internal corners of plain colored mouse over effect.
+14. Round internal corners of plain coloured mouse over effect.
 15. Remove reading of Qt3 palette - this 'hack' only worked for pure Qt apps.
 
 0.59.5
@@ -297,7 +297,7 @@
 0.59.3
 ------
 1. Fix background drawng of sliders on toolbars (such as in Kaffeine), when
-   colored mouse over is disabled and highlight factor is set to 1.0.
+   coloured mouse over is disabled and highlight factor is set to 1.0.
 
 0.59.2
 ------
@@ -318,10 +318,10 @@
  5. Option to display non-editable combo splitter - defaults to true.
  6. Dont do coloured mouse over for mdi buttons, dock widget buttons,
     or toolbar buttons.
- 7. Better colored mouse over for checks and radios.
+ 7. Better coloured mouse over for checks and radios.
  8. Don't use background colour for non-coloured mouse over of
     check/radios if highlighting text backgroud.
- 9. When coloring menubars, correctly draw menubar text colour
+ 9. When colouring menubars, correctly draw menubar text colour
     of inactive windows.
 10. Fix potential crash when using pixmap cache.
 11. Fix tab coloured mouse-over when not rounded.
@@ -350,7 +350,7 @@
 4. Remove some frames from systemsettings.
 5. Don't draw menu separators through stripe.
 6. Draw menu stripe on the right for RTL languages.
-7. Supply a QtCurve colors file.
+7. Supply a QtCurve colours file.
 8. Lighter menustripe when not lightening menus.
 9. Lighter menu separators.
 
@@ -521,7 +521,7 @@
     light colour schemes.
  9. Dont draw sunken panel around checked menuitems.
 10. Fix karm (and others?) statusbar icon.
-11. Fix for radio buttons in apps where QApplication::NormalColor!=QApplication::colorSpec()
+11. Fix for radio buttons in apps where QApplication::NormalColour!=QApplication::colourSpec()
     (e.g. designer)
 
 0.50
@@ -629,7 +629,7 @@
                             follows general appearance.
         Tab appearance - set from general appearace.
         Draw dock window titles - never.
-        Colored sidebar buttons - always.
+        Coloured sidebar buttons - always.
  3. Changed appearance of check/radios - now filled with base
     colour.
  4. Etch look for button, combos, line edits, and spin boxes.
@@ -702,7 +702,7 @@
 0.45
 ----
 1. Option to control whether highlighted items should use
-   the highlight color in inactive windows.
+   the highlight colour in inactive windows.
 2. Option to control whether menubars should be shaded in
    inactive windows.
 3. Fix loading / selection of options.
@@ -742,7 +742,7 @@
     next, or none.
  9. Slightly better radios in khtml.
 10. Slightly smaller buttons.
-11. Option to have colored side-bar buttons - e.g. the buttons on the
+11. Option to have coloured side-bar buttons - e.g. the buttons on the
     edge of kate's windows.
 12. Improvement to Opera's MDI buttons in menubar area. Not
     perfect, but better.
@@ -751,7 +751,7 @@
 
 0.43.2
 ------
-1. Fix the config dialog to notice changes in menu text color settings.
+1. Fix the config dialog to notice changes in menu text colour settings.
 2. Dont draw menubar text twice!
 
 0.43.1
@@ -767,7 +767,7 @@
  5. Really fix KDE 3.5.5 taskbar flicker...
  6. Slight improvement to combobox when right-to-left
  7. Seperate specification of scollbar slider, and range slider, settings.
- 8. Option to specify menubar text colors.
+ 8. Option to specify menubar text colours.
  9. New 'flat' appearance.
 10. Options to use a coloured border for mouse-over.
 11. Nicer looking check and radio buttons - using pixmaps.
@@ -916,7 +916,7 @@
  7. KDE: Use dots also for general handles - more consistent.
  8. KDE: Theme dock window handles - i.e. no more text.
  9. KDE: Fix/hack look of MDI window buttons.
-10. GTK2: Hackish fix for firefox and KDE's "apply colors to non-KDE apps" 
+10. GTK2: Hackish fix for firefox and KDE's "apply colours to non-KDE apps"
           setting.
 11. GTK: Fix for tear of menu background.
 
@@ -977,7 +977,7 @@
  6. ALL: New gradient style: bevelled - gradient top/bot, and plain in the
          middle. Affects listview headers, buttons, and combos.
  7. ALL: Allow setting of listview appearance.
- 8. ALL: Allow setting of listview header color - background, button, or
+ 8. ALL: Allow setting of listview header colour - background, button, or
         custom.
  9. ALL: Option to only round top of selected menubar items.
 10. ALL: New toolbar handle style: dashes
@@ -1013,8 +1013,8 @@
          wont happen in Gtk2 apps until they are restarted.
 4. GTK: Dont draw dividers in listview headers, unless header is >10 pixels
 5. ALL: Gradient non-selected tabs as well as selected.
-6. GTK2: Also look in "hicolor" for icons. Search order will be:
-             <chosen theme>, crystalsvg, hicolor
+6. GTK2: Also look in "hicolour" for icons. Search order will be:
+             <chosen theme>, crystalsvg, hicolour
 7. GTK2: Map gt-add and gtk-remove stock icons
 
 0.30
@@ -1099,7 +1099,7 @@
 11. ALL: Fix for tab-bar highlight when using light selection colours.
 12. KDE: Fix for non-bordered gradient radio buttons.
 13. GTK: More KDE like menu sizing.
-14. KDE: Fix/hack for OO.o2.x menubars. If the selected menu color is toodark,
+14. KDE: Fix/hack for OO.o2.x menubars. If the selected menu colour is toodark,
          then lighten. This is required as OO.o always draws the menu text
          dark! It seems to have a check for plastik style though, and then
          it draws selected popup menu items white.
