--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+0.66.0
+------
+1. Add a new 'Dark Inverted Gradient' and use this as the default gradient
+   for menu stripes.
+
 0.65.5
 ------
 1. Fix colour of disabled menuitems (use 'mid' colour).
