--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 ------
 1. Add a new 'Dark Inverted Gradient' and use this as the default gradient
    for menu stripes.
+2. Add option to lighten/darken the background of tabs.
 
 0.65.5
 ------
