--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
 1. Add a new 'Dark Inverted Gradient' and use this as the default gradient
    for menu stripes.
 2. Add option to lighten/darken the background of tabs.
-3. Fix colour of disabled menuitems (use 'mid' colour).
+3. Use default KDE4 settings to determine colour of text for disabled items.
 
 0.65.4
 ------
