--- a/ChangeLog
+++ b/ChangeLog
@@ -4,11 +4,13 @@
    for menu stripes.
 2. New 'Agua' style gradient - looks better under KDE4 and Gtk2.
 3. Add option to lighten/darken the background of tabs.
-4. Use KDE_SESSION_VERSION to determine which KDE prefix (KDE3, or KDE4) to
+4. New splitter / toolbar handle / slider thumb style - single dot.
+5. Make inactive tabs more consistent with active tabs.
+6. Use KDE_SESSION_VERSION to determine which KDE prefix (KDE3, or KDE4) to
    seach first for qtc_xxx.themerc files.
-5. Update Klearlooks to be more consistent with Clearlooks (lighten tab background,
+7. Update Klearlooks to be more consistent with Clearlooks (lighten tab background,
    use highlight strip on active tab, dont colour active tab)
-6. Use default KDE4 settings to determine colour of text for disabled items.
+8. Use default KDE4 settings to determine colour of text for disabled items.
 
 0.65.4
 ------
