--- a/ChangeLog
+++ b/ChangeLog
@@ -5,12 +5,14 @@
 2. New 'Agua' style gradient - looks better under KDE4 and Gtk2.
 3. Add option to lighten/darken the background of tabs.
 4. Make inactive tabs more consistent with active tabs.
-5. Use KDE_SESSION_VERSION to determine which KDE prefix (KDE3, or KDE4) to
+5. Remove sunken scroll views config item, and replace with option to control
+   if entries and scroll views should be etched (sunken).
+6. Use KDE_SESSION_VERSION to determine which KDE prefix (KDE3, or KDE4) to
    seach first for qtc_xxx.themerc files.
-6. Update Klearlooks to be more consistent with Clearlooks (lighten tab background,
+7. Update Klearlooks to be more consistent with Clearlooks (lighten tab background,
    use highlight strip on active tab, dont colour active tab)
-7. Use default KDE4 settings to determine colour of text for disabled items.
-8. When calling kde-config/kde4-config pipe stderr to /dev/null
+8. Use default KDE4 settings to determine colour of text for disabled items.
+9. When calling kde-config/kde4-config pipe stderr to /dev/null
 
 0.65.4
 ------
