--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.66.1
+------
+1. Disable spin button when at min/max - matches Gtk2.
+
 0.66.0
 ------
  1. Add a new 'Dark Inverted Gradient' and use this as the default gradient
