--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 ------
 1. Disable spin button when at min/max - matches Gtk2.
 2. Disable scrollbar buttons when at min/max - to match spin buttons.
+3. Fix shadows on radio buttons.
 
 0.66.0
 ------
