--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,9 @@
-0.66.1
+0.67.0
 ------
-1. Disable spin button when at min/max - matches Gtk2.
-2. Disable scrollbar buttons when at min/max - to match spin buttons.
-3. Fix shadows on radio buttons.
+1. Add option to draw insider border of inactive tabs.
+2. Disable spin button when at min/max - matches Gtk2.
+3. Disable scrollbar buttons when at min/max - to match spin buttons.
+4. Fix shadows on radio buttons.
 
 0.66.0
 ------
