--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.67.1
+------
+1. Disable combobox mouse over for OpenOffice.
+
 0.67.0
 ------
 1. Add option to draw insider border of inactive tabs.
