When using coloured mouse over, use mouse over colour for arrows.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.67.2
+------
+1. When using coloured mouse over, use mouse over colour for arrows.
+
 0.67.1
 ------
 1. Disable combobox mouse over for OpenOffice.
