--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 1. When using coloured mouse over, use mouse over colour for arrows.
 2. Only do mouse over for entries if combos and spin widgets are unified.
 3. If not etching/shadowing, when mosue over set to 'glow' use 'thick coloured'
+4. If not etching/shadowing, make descrease thinner scrollbar groove.
 
 0.67.1
 ------
