--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 2. Only do mouse over for entries if combos and spin widgets are unified.
 3. If not etching/shadowing, when mosue over set to 'glow' use 'thick coloured'
 4. If not etching/shadowing, make descrease thinner scrollbar groove.
+5. Fix shaded button on combos when not etching/shadowing.
 
 0.67.1
 ------
