--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 0.67.2
 ------
+1. Fix saving of menubar item 'colour on mouse over' setting.
+
+0.67.2
+------
 1. Only do mouse over for entries if combos and spin widgets are unified.
 2. If not etching/shadowing, when mouse over set to 'glow' use 'thick coloured'
 3. If not etching/shadowing, decrease thinner scrollbar groove.
