--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 0.67.2
 ------
 1. Fix saving of menubar item 'colour on mouse over' setting.
+2. Offset sunken slider thumbs to improve appearance.
 
 0.67.2
 ------
