--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+0.68.0
+------
+1. New options:
+    Control whether icons are displayed in menus
+    Force alternate colours in listviews
+
 0.67.3
 ------
 1. Fix saving of menubar item 'colour on mouse over' setting.
