--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.69.1
+------
+1. Remove line beneath dock widget titles.
+
 0.69.0
 ------
 1. Add option to control whether bottom tabs should have their gradient
