--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+0.70.0
+------
+1. Add option to specify appearance of dock-widget titlebars.
+
 0.69.1
 ------
 1. Remove line beneath dock widget titles.
