--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 0.70.0
 ------
 1. Added option to colour selected check/radios.
-2. Add option to specify appearance of dock-widget titlebars.
+2. Added option to use a smaller dot for radios.
+3. Add option to specify appearance of dock-widget titlebars.
 
 0.69.1
 ------
