--- a/ChangeLog
+++ b/ChangeLog
@@ -2,11 +2,13 @@
 ------
 1. Added option to colour selected check/radios.
 2. Added option to use a smaller dot for radios.
-3. Don't do coloured mouse over for buttons of editable combos, spin buttons,
+3. Added option to control whether the background of splitters should be
+   highlighted on mouse over.
+4. Don't do coloured mouse over for buttons of editable combos, spin buttons,
    or scrollbar buttons.
-4. Don't do regular coloured mouse over of sliders when theese are seto to be
+5. Don't do regular coloured mouse over of sliders when theese are seto to be
    coloured on mouse over.
-5. Add option to specify appearance of dock-widget titlebars.
+6. Add option to specify appearance of dock-widget titlebars.
 
 0.69.1
 ------
