--- a/ChangeLog
+++ b/ChangeLog
@@ -4,12 +4,13 @@
 2. Added option to use a smaller dot for radios.
 3. Added option to control whether the background of splitters should be
    highlighted on mouse over.
-4. Don't do coloured mouse over for buttons of editable combos, spin buttons,
+4. Added new splitter/handle/thumb style: single dot.
+5. Don't do coloured mouse over for buttons of editable combos, spin buttons,
    or scrollbar buttons.
-5. Don't do regular coloured mouse over of sliders when theese are seto to be
+6. Don't do regular coloured mouse over of sliders when theese are seto to be
    coloured on mouse over.
-6. Allow to specify strength when colouring selected tab.
-7. Add option to specify appearance of dock-widget titlebars.
+7. Allow to specify strength when colouring selected tab.
+8. Add option to specify appearance of dock-widget titlebars.
 
 0.69.1
 ------
