--- a/README
+++ b/README
@@ -60,4 +60,4 @@ pixmaps.h
 
 To regenerate this, run the following:
 
-    qembed radio_frame.png radio_inner.png radio_light.png radio_on.png radio_on_small.png check_on.png slider.png slider_light.png check_x_on.png > pixmaps.h
+    qembed radio_frame.png radio_inner.png radio_light.png radio_on.png radio_on_small.png check_on.png slider.png slider_light.png check_x_on.png dot.png > pixmaps.h
