--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,7 @@
 4. Added new splitter/handle/thumb style: single dot.
 5. Don't do coloured mouse over for buttons of editable combos, spin buttons,
    or scrollbar buttons.
-6. Don't do regular coloured mouse over of sliders when theese are seto to be
+ 6. Don't do regular coloured mouse over of sliders when theese are set to be
    coloured on mouse over.
 7. Allow to specify strength when colouring selected tab.
 8. Add option to specify appearance of dock-widget titlebars.
