--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,9 @@
    coloured on mouse over.
 7. Allow to specify strength when colouring selected tab.
 8. Add option to specify appearance of dock-widget titlebars.
+9. When saving settings to $XDG_CONFIG_HOME/qtcurve/stylerc, remove the older
+   $XDG_CONFIG_HOME/qtcurvestylerc, and $XDG_CONFIG_HOME/qtcurve.gtk-icons if they
+   exist.
 
 0.69.1
 ------
