--- a/ChangeLog
+++ b/ChangeLog
@@ -15,7 +15,10 @@
     $XDG_CONFIG_HOME/qtcurvestylerc, and $XDG_CONFIG_HOME/qtcurve.gtk-icons if they
     exist.
 10. Use split gradient for dock-widget titlebars.
-
+11. Allow to compile style against jsut Qt3 - tarball includes a simplified copy
+    of KStyle. Need to pass -DQTC_QT_ONLY to cmake. NOTE: May also need to set QTDIR
+    *before* calling cmake.
+    
 0.69.1
 ------
 1. Remove line beneath dock widget titles.
