--- a/README
+++ b/README
@@ -10,6 +10,10 @@ To build and install:
 
 The following options may be supplied to cmake:
 
+    -DQTC_QT_ONLY=true
+        Build style as a pure Qt3 style. NOTE: May also need to set QTDIR *before*
+        calling cmake.
+
     -DQTC_DEFAULT_TO_KDE3=true
        If the KDE_SESSION_VERSION is not set, then assume we are running
        under KDE3. If this cmake option is not set, then KDE4 is assumed.
