--- a/README
+++ b/README
@@ -18,6 +18,10 @@ The following options may be supplied to cmake:
        If the KDE_SESSION_VERSION is not set, then assume we are running
        under KDE3. If this cmake option is not set, then KDE4 is assumed.
 
+    -DQTC_STYLE_SUPPORT=true
+       Support QtCurve style files. These are stored as
+       <kde prefix>/share/apps/kstyle/themes/qtc_<stylename>.themerc
+
 Themes
 ------
 As of v0.55, you can create QtCurve based themes. These will appear with KDE's style
