--- a/ChangeLog
+++ b/ChangeLog
@@ -6,23 +6,24 @@
     highlighted on mouse over.
  4. Made check/radio and splitter highlight options a configurable % - i.e.
     not based on standard hightlight %
- 5. Added new splitter/handle/thumb style: single dot.
- 6. Don't do coloured mouse over for buttons of editable combos, spin buttons,
+ 5. When highlighting check/radio background, use the selection gradient.
+ 6. Added new splitter/handle/thumb style: single dot.
+ 7. Don't do coloured mouse over for buttons of editable combos, spin buttons,
     or scrollbar buttons.
- 7. Don't do regular coloured mouse over of sliders when these are set to be
+ 8. Don't do regular coloured mouse over of sliders when these are set to be
     coloured on mouse over.
- 8. Allow to specify strength when colouring selected tab.
- 9. Remove support for QtCurve styles (these appear as unique KDE styles in the
+ 9. Allow to specify strength when colouring selected tab.
+10. Remove support for QtCurve styles (these appear as unique KDE styles in the
     main KDE style selection dialog). Re-enable support by passing
     -DQTC_STYLE_SUPPORT=true to cmake.
-10. Slightly lighter shade used for coloured mouse over of arrows.
-11. Add option to specify appearance of dock-widget titlebars.
-12. When saving settings to $XDG_CONFIG_HOME/qtcurve/stylerc, remove the older
+11. Slightly lighter shade used for coloured mouse over of arrows.
+12. Add option to specify appearance of dock-widget titlebars.
+13. When saving settings to $XDG_CONFIG_HOME/qtcurve/stylerc, remove the older
     $XDG_CONFIG_HOME/qtcurvestylerc, and $XDG_CONFIG_HOME/qtcurve.gtk-icons if they
     exist.
-13. Use split gradient for dock-widget titlebars.
-14. Reduce number of supplied presets.
-15. Allow to compile style against just Qt3 - tarball includes a simplified copy
+14. Use split gradient for dock-widget titlebars.
+15. Reduce number of supplied presets.
+16. Allow to compile style against just Qt3 - tarball includes a simplified copy
     of KStyle. Need to pass -DQTC_QT_ONLY to cmake. NOTE: May also need to set QTDIR
     *before* calling cmake.
     
