--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1.0.1
+-----
+1. Apply cygwin patches from Yaakov S - use MODULE istead of SHARED.
+
 1.0.0
 -----
  1. Added option to colour selected check/radios.
