--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 -----
 1. Draw etch effect on radios if using a button effect, and not using button-like
    check/radios.
-2. If drawing square scrollviews, use a dark/light borders.
+2. If drawing square non-gtk style scrollviews, use a dark/light borders.
 3. If drawing square scrollviews, set frame width to 1 if using thin scrollbar
    groove.
 
