--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
 4. Add options to draw square progress and entry fields when rounding.
 5. Add option to control whether progressbars have a border on all sides, or just
    top/bottom.
+6. Allow to draw focus highlight for square scrollviews.
 
 1.1.1
 -----
