Use 'kde' to disable parent-less dialog fix for all KDE applications.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 -----
 1. Fix(?) compilation of config module.
 2. Dont use KStandardDirs to create config folder.
+3. Use 'kde' to disable parent-less dialog fix for all KDE applications.
 
 1.2.0
 -----
