--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 -----
 1. Fix compilation of config module. Please note that this module is deprecated,
    and might be out-of sync with the maintained KDE4 version.
+2. Fix compile when style support is enabled.
 
 1.3.0
 -----
