--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1.4.0
+-----
+1. Add striped window and menu background options.
+
 1.3.1
 -----
 1. Fix compilation of config module. Please note that this module is deprecated,
