--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 1.4.0
 -----
 1. Add striped window and menu background options.
-2. Fix drawing of scrollbar background.
+2. Added options to not square frames and tab frames.
+3. Fix drawing of scrollbar background.
 
 1.3.1
 -----
