--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 1. Add striped window and menu background options.
 2. Added options to not square frames and tab frames.
 3. Fix drawing of scrollbar background.
+4. Add option to drag windows by menubar.
 
 1.3.1
 -----
