--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,13 @@
 -----
 1. Add striped window and menu background options.
 2. Added options to not square frames and tab frames.
-3. Fix drawing of scrollbar background.
-4. Add option to drag windows by menubar.
+3. Add option to drag windows by menubar.
+4. Blend menubar and window titlebar gradients if:
+         menubar, titlebar, and inactive titlebar gradients match AND
+         not blending titlebar gradient AND
+         using window titlebar colour for menubar AND
+         extending window drag into menubar
+5. Fix drawing of scrollbar background.
 
 1.3.1
 -----
