--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 -----
 1. Add 'glow' focus option - this is now the default.
 2. Fix potential crash in rgbToHsv
+3. Enable glow/shadow/etch for square and slight round settings.
 
 1.5.0
 -----
