--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 1. Add 'glow' focus option - this is now the default.
 2. Fix potential crash in rgbToHsv
 3. Enable glow/shadow/etch for square and slight round settings.
+4. Draw coloured mouse over for 'checked' toggle buttons.
 
 1.5.0
 -----
