--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 3. Enable glow/shadow/etch for square and slight round settings.
 4. Draw coloured mouse over for 'checked' toggle buttons.
 5. Use Highlight colour for default button glow.
+6. Default sub-menu popup delay to 225 - matches Gtk2 standard default.
 
 1.5.0
 -----
