--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1.6.1
+-----
+1. Use same radius for all corners of progressbar.
+
 1.6.0
 -----
 1. Add 'glow' focus option - this is now the default.
