--- a/ChangeLog
+++ b/ChangeLog
@@ -3,8 +3,9 @@
 1. Add option to use tiled pixmap as background for windows and menus.
 2. Draw line focus for items that cannot use glow focus.
 3. Use popup menu gradient's border setting to determine border type of menus.
-4. Add option to draw raised or joined toolbar buttons..
-5. Implement shading popup menus as per memubar settings.
+4. Add option to draw raised or joined toolbar buttons.
+5. Add option to use thinner frames, focus, etc.
+6. Implement shading popup menus as per memubar settings.
 
 1.6.2
 -----
