--- a/ChangeLog
+++ b/ChangeLog
@@ -5,8 +5,9 @@
 3. Use popup menu gradient's border setting to determine border type of menus.
 4. Add option to draw standard, raised, or joined toolbar buttons.
 5. Add option to use thinner frames, focus, etc.
-6. Implement shading popup menus as per memubar settings.
-7. Fix segfault when obtaining MDI colours.
+6. If not rounding, enable all 'square' options.
+7. Implement shading popup menus as per memubar settings.
+8. Fix segfault when obtaining MDI colours.
 
 1.6.2
 -----
