Store background colour setting in XProperty - so that this can be used by QtCurve kwin decoration.

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,8 +6,10 @@
 4. Add option to draw standard, raised, or joined toolbar buttons.
 5. Add option to use thinner frames, focus, etc.
 6. If not rounding, enable all 'square' options.
-7. Implement shading popup menus as per memubar settings.
-8. Fix segfault when obtaining MDI colours.
+7. Store background colour setting in XProperty - so that this can be used by
+   QtCurve kwin decoration.
+8. Implement shading popup menus as per memubar settings.
+9. Fix segfault when obtaining MDI colours.
 
 1.6.2
 -----
