Hide shortcut underlines

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 1.8.0
 -----
-1. If highlighting scrollviews, and allow mouse-over for entries, also allow
+1. Add option to not display keyboard shortcurt underline until 'Alt' is
+   pressed.
+2. If highlighting scrollviews, and allow mouse-over for entries, also allow
    mouse-over for scrollviews.
 
 1.7.1
