--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1.8.1
+-----
+1. Safer handling of hidden shortcut underscore in popup menus. Only keep
+   track of menu widget, not its ancestors.
+
 1.8.0
 -----
 1. Add option to not display keyboard shortcurt underline until 'Alt' is
